--- a/mypage/webapp/index.html
+++ b/mypage/webapp/index.html
@@ -12,7 +12,7 @@
     </style>
     <script
         id="sap-ui-bootstrap"
-        src="https://sdk.openui5.org/1.120.38/resources/sap-ui-core.js"
+        src="https://sdk.openui5.org/1.136.1/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resource-roots='{
             "mypage": "./"
