--- a/mypage/webapp/index.html
+++ b/mypage/webapp/index.html
@@ -20,7 +20,7 @@
         data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compat-version="edge"
         data-sap-ui-async="true"
-        data-sap-ui-libs="sap.m,sap.uxap,sap.ui.suite.commons"
+        data-sap-ui-libs="sap.m,sap.uxap,sap.suite.ui.commons"
         data-sap-ui-frame-options="trusted"
     ></script>
 </head>
