--- a/mypage/webapp/index.html
+++ b/mypage/webapp/index.html
@@ -12,7 +12,7 @@
     </style>
     <script
         id="sap-ui-bootstrap"
-        src="https://ui5.sap.com/1.120.39/resources/sap-ui-core.js"
+        src="https://ui5.sap.com/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resource-roots='{
             "mypage": "./"
