Update redirect path in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script>
-      window.location.replace("./webapp/index.html");
+      window.location.replace("./mypage/webapp/index.html");
     </script>
   </head>
   <body>
